Fix header spacing to match spec

--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,11 @@ p, button, li {
 
 button {
     background-color: #3882f6;
-    padding: 10px;
+    padding: 7px;
     border-radius: 10px;
     max-width: 150px;
     color:#f9faf8;
+    margin: 10px 0;
 }
 
 .header, .footer {
@@ -60,7 +61,8 @@ li {
 .hero {
     display: flex;
     gap: 40px;
-    margin: 30px 0;
+    margin: 70px 0;
+    align-items: center;
 }
 
 .hero-text {
@@ -70,6 +72,11 @@ li {
 
 .hero-text > h1 {
     margin: 0
+}
+
+.hero-text > p {
+    color: #e5e7eb;
+    margin: 0;
 }
 
 .hero-image > img {
